# photomeformac

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_LIGHT.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: agent-pr-gate.yml  agent-pr-webhook.yml  mac-release.yml  (+1 more)
app/: __init__.py  main.py
data/: fingerprint_missing.py  fingerprint_mobile.py
docker/: entrypoint.sh
docs/: README.md
scripts/: bootstrap_mac_backend_venv.sh  build_mac_app_bundle.sh  local_ai_pack.py  mac_app_backend_env.py  mac_app_smoke.py  materialize_auto_tags.py  notarize_mac_app.sh  prepare_local_geodata.py  sample_testbed.py  setup_github_labels.sh
tests/: conftest.py  e2e_utils.py  test_auto_tags.py  test_backend_offline_overlay_e2e.py  test_cluster_reconcile.py  test_cross_browser_smoke_e2e.py  test_dir_mtime_cache.py  test_event_loop_offload.py  test_folder_switch_semantics.py  test_gallery_person_filter.py  test_hybrid_search_service.py  test_i18n.py  test_i18n_web.py  test_image_orientation.py  test_lan_admin_guard.py  test_local_geocoding.py  test_mac_app_backend_env.py  test_mac_app_smoke.py  test_mac_app_webview_reload.py  test_mac_packaging_release.py  test_media_contracts.py  test_nas_remount.py  test_people_merge_suggestions.py  test_person_label_reconcile.py  test_registry_status_preservation.py  test_sample_testbed_script.py  test_scenario_validation.py  test_search_api.py  test_search_nl.py  test_single_instance.py  test_tagging_pipeline.py  test_telemetry.py  test_ux_e2e.py
(+402 files in other folders)
