[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trove"
version = "0.1.0"
description = "Integrated local-first personal photo server with semantic search groundwork"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=2.0,<3.0",
  "opencv-python-headless>=4.10,<5.0",
  "pillow>=12.2,<13.0",
  "pillow-heif>=1.1,<2.0",
  "pytesseract>=0.3.13,<1.0",
  "pyshp>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "starlette>=0.49.3,<0.50",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
clip = [
  "open_clip_torch>=2.29,<3.0",
  "torch>=2.5,<3.0",
  "torchvision>=0.20,<1.0",
]
faiss = [
  "faiss-cpu>=1.7,<2.0",
]
caption = [
  "moondream>=0.0.5",
]
konlpy = [
  "konlpy>=0.6,<1.0",
]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[project.scripts]
trove = "app.main:main"
trove-local-ai-pack = "app.cli.local_ai_pack:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"app.services.search" = ["vocab_seed.yaml", "tag_synonyms.yaml"]
"app.services.analysis" = ["clip_concepts.yaml", "filename_tags.yaml"]

[tool.setuptools.packages.find]
include = ["app*"]
